Pedidos retornando via magento-api

--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -1,38 +1,38 @@
 <div class="example-container mat-elevation-z8">
-  <div class="example-loading-shade"
-       *ngIf="isLoadingResults || isRateLimitReached">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-    <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-      GitHub's API rate limit has been reached. It will be reset in one minute.
-    </div>
-  </div>
+
 
   <div class="example-table-container">
 
     <table mat-table [dataSource]="data" class="example-table"
-           matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
-      <!-- Number Column -->
-      <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let row">{{row.number}}</td>
+           matSort matSortActive="created_at" matSortDisableClear matSortDirection="desc">
+      <!-- Increment ID Column -->
+      <ng-container matColumnDef="increment_id">
+        <th mat-header-cell *matHeaderCellDef>Increment ID</th>
+        <td mat-cell *matCellDef="let row">{{row.increment_id}}</td>
       </ng-container>
 
-      <!-- Title Column -->
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef="let row">{{row.title}}</td>
+      <!-- email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef="let row">{{row.customer_email}}</td>
       </ng-container>
 
-      <!-- State Column -->
-      <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef>State</th>
-        <td mat-cell *matCellDef="let row">{{row.state}}</td>
+      <!-- total_qty_ordered Column -->
+      <ng-container matColumnDef="total_qty_ordered">
+        <th mat-header-cell *matHeaderCellDef>Quantidade</th>
+        <td mat-cell *matCellDef="let row">{{row.total_qty_ordered}}</td>
+      </ng-container>
+
+      <!-- grand_total Column -->
+      <ng-container matColumnDef="grand_total">
+        <th mat-header-cell *matHeaderCellDef>Total</th>
+        <td mat-cell *matCellDef="let row">{{row.grand_total}}</td>
       </ng-container>
 
       <!-- Created Column -->
-      <ng-container matColumnDef="created">
+      <ng-container matColumnDef="created_at">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Created
+          Created At
         </th>
         <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
       </ng-container>
